Removed Legacy and Textured ViewCube UI controls.

--- a/src/OpenInfraPlatform/Forms/PreferencesDialog.ui
+++ b/src/OpenInfraPlatform/Forms/PreferencesDialog.ui
@@ -453,6 +453,9 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
+			  <property name="visible">
+				<bool>false</bool>
+			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
@@ -508,6 +511,9 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
+			  <property name="visible">
+				<bool>false</bool>
+			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
@@ -560,6 +566,9 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
+			  <property name="visible">
+				<bool>false</bool>
+			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
@@ -605,6 +614,9 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
+			  <property name="visible">
+				<bool>false</bool>
+			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
