--- a/src/OpenInfraPlatform/Forms/PreferencesDialog.ui
+++ b/src/OpenInfraPlatform/Forms/PreferencesDialog.ui
@@ -21,7 +21,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidgetCommon">
      <property name="currentIndex">
-      <number>0</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="tabClearColor">
       <attribute name="title">
@@ -451,11 +451,8 @@
             <item>
              <widget class="QCheckBox" name="checkBoxShowCompass">
               <property name="enabled">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
-			  <property name="visible">
-				<bool>false</bool>
-			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
@@ -466,7 +463,7 @@
                <string>Show Compass</string>
               </property>
               <property name="checked">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -511,14 +508,14 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
-			  <property name="visible">
-				<bool>false</bool>
-			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="visible">
+               <bool>false</bool>
               </property>
               <property name="text">
                <string>Textured ViewCube</string>
@@ -566,14 +563,14 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
-			  <property name="visible">
-				<bool>false</bool>
-			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="visible">
+               <bool>false</bool>
               </property>
               <property name="text">
                <string>Legacy View Cube</string>
@@ -614,14 +611,14 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
-			  <property name="visible">
-				<bool>false</bool>
-			  </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="visible">
+               <bool>false</bool>
               </property>
               <property name="text">
                <string>Show Rotation Arrows</string>
@@ -694,7 +691,7 @@
                <enum>Qt::Horizontal</enum>
               </property>
               <property name="sizeType">
-               <enum>QSizePolicy::Preferred</enum>
+               <enum>QSizePolicy::Expanding</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
@@ -717,7 +714,7 @@
                <enum>Qt::Horizontal</enum>
               </property>
               <property name="sizeType">
-               <enum>QSizePolicy::Preferred</enum>
+               <enum>QSizePolicy::Expanding</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
