--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -347,6 +347,8 @@
     <addaction name="actionCheck_for_Updates"/>
     <addaction name="separator"/>
     <addaction name="actionAbout"/>
+    <addaction name="separator"/>
+    <addaction name="actionShow_Log_File"/>
    </widget>
    <widget class="QMenu" name="menuDesignView">
     <property name="title">
@@ -1123,6 +1125,11 @@
   <action name="actionOkstraOWL">
    <property name="text">
     <string>OKSTRA OWL (*.rdf)</string>
+   </property>
+  </action>
+  <action name="actionShow_Log_File">
+   <property name="text">
+    <string>Show Log File</string>
    </property>
   </action>
  </widget>
