--- a/src/OpenInfraPlatform/Forms/MainWindow.ui
+++ b/src/OpenInfraPlatform/Forms/MainWindow.ui
@@ -349,10 +349,11 @@
     <addaction name="actionCheck_for_Updates"/>
     <addaction name="separator"/>
     <addaction name="actionAbout"/>
+    <addaction name="actionShow_License_and_Copyright_Information"/>
     <addaction name="separator"/>
     <addaction name="actionShow_Log_File"/>
     <addaction name="actionShow_Log_Folder"/>
-    <addaction name="actionShow_License_and_Copyright_Information"/>
+    <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="menuDesignView">
     <property name="title">
