--- a/src/OpenInfraPlatform/Forms/ExportIfc4x1Dialog.ui
+++ b/src/OpenInfraPlatform/Forms/ExportIfc4x1Dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ExportIfcAlignment1x1Dialog</class>
- <widget class="QDialog" name="ExportIfcAlignment1x1Dialog">
+ <class>ExportIfc4x1Dialog</class>
+ <widget class="QDialog" name="ExportIfc4x1Dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>IFC Alignment 1x1 Export</string>
+   <string>IFC 4x1 Export</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../Resources/OpenInfraPlatform.qrc">
@@ -55,7 +55,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>IFC Version</string>
+      <string>IFC Header</string>
      </property>
     </widget>
    </item>
@@ -85,9 +85,12 @@
    </item>
    <item row="0" column="1">
     <widget class="QComboBox" name="comboBoxIfcSchemaVersion">
+     <property name="currentText">
+      <string>IFC4X1</string>
+     </property>
      <item>
       <property name="text">
-       <string>IFC4x1</string>
+       <string>IFC4X1</string>
       </property>
      </item>
      <item>
@@ -97,7 +100,7 @@
      </item>
      <item>
       <property name="text">
-       <string>IFC2x3</string>
+       <string>IFC2X3</string>
       </property>
      </item>
     </widget>
